sass/businesspapers-2024.scss
/*#region Variables */

// standard indent level
$indent-amount: 2.2rem;

// default margin bottom from design system
$para-spacing: 18px;

$font-bold: 500;

/*#endregion Variables */

/*#region Layout */

.OP-left-margin {
    margin-left: 0 !important;
}

/*#endregion Layout */

/*#region Headings */

.DocumentTitle {
    border-bottom: 1px solid;
    font-weight: 500;
    letter-spacing: 0.05em;
    padding-bottom: 0.5em;
    text-transform: uppercase;
}

.MainTitle {
    border-bottom: 1px solid;
    font-size: 1.618em;
    font-weight: 500;
    padding-bottom: 0.5em;
}

.paraBusinessSub-SectionHeading {
    background-color: #717171;
    color: #fff;
    font-size: 1.309em;
    letter-spacing: 0.025em;
    margin-right: 0;
    margin-left: 0;
    padding: 0.1em 1em;
    text-align: center;
    text-transform: uppercase;
}

.Heading3Underlined {
    border-bottom: 1px solid;
    font-size: 1.309em;
    font-weight: 500;
    margin-top: 45px;
    margin-bottom: 27px;
    padding-bottom: 0.309em;
}

.paraChamberSummaryHeading {
    // was text-transform: uppercase; before 2024 redesign
    font-size: 1.2em;
    margin-top: 36px;
    margin-bottom: 27px;
    text-transform: none !important;
}

.paraBusinessTodayChamberHeading,
.paraBusinessSub-SectionHeading {
    margin-left: 0 !important;
    text-align: center;
    line-height: 1.1;
    padding: 0.1em 1.5em 0.2em 1.5em !important;
}

.paraBusinessItemHeading {
    text-transform: none;
}

.anchor-link {
    display: inline-block !important;
    height: 1em;
    padding-right: 0 !important;
    padding-left: 0 !important;
    position: relative;
}

.anchor-link::after {
    display: block;
    margin-top: -0.075em;
    padding-left: 0.5em;
    position: absolute;
}

/*#endregion Headings */

/*#region Paragraphs */

.NumberedParaHanging {
    margin-left: $indent-amount;
}

.NumberedParaHanging span {
    display: inline-block;
    margin-left: - $indent-amount;
    padding-right: 1rem;
    text-align: right;
    width: $indent-amount;
}

.paraMotionSub-Paragraph,
.paraAmendmentSponsor {
    margin-left: $indent-amount;
}

.paraAmendmentSponsor {
    font-weight: $font-bold
}

.paraMotionSub-Sub-Paragraph {
    margin-left: $indent-amount;
}

.paraMotionSubSub-Paragraph {
    margin-left: $indent-amount * 2;
}

.MotionSponsorGroup_indent {
    margin-left: $indent-amount;
}

/*#endregion Paragraphs */

/*#region Tables */

.Basic-Text-Frame table,
table.StandardTable {
    border: 0;
    border-collapse: collapse;
    border-spacing: 0;
    display: block;
    margin-top: 0 !important;
    margin-bottom: 27px;
    overflow-x: auto;
    overscroll-behavior-x: contain;
    white-space: nowrap;
}

table.StandardTable {
    margin-left: 0 !important;
}

.Basic-Text-Frame table td,
table.StandardTable td {
    border: 1px solid;
    padding: 0.5em 0.75em;
    vertical-align: top;
    width: auto;
}

.Basic-Text-Frame table thead td,
table.StandardTable thead td {
    background-color: #EAEAEA;
    font-weight: 500;
}

.Basic-Text-Frame table thead td p {
    margin: 0;
}

/*#endregion Tables*/

/*#region Dividers */

p.Line_Interstitial {
    border-top: 1px solid;
    display: block;
    height: 1px;
    margin: 1.55em 0 !important;
    padding: 0 !important;
    width: 3em;
}

/*#endregion Dividers*/

